07_flask-user-clip.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-user-clip
spec:
  type: ClusterIP
  selector:
    component: flask-user
  ports:
    - port: 5000
      targetPort: 5000
