10_flask-appointment-clip.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-appointment-clip
spec:
  type: ClusterIP
  selector:
    component: flask-appointment
  ports:
    - port: 5000
      targetPort: 5000
