13_flask-notify-clip.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-notify-clip
spec:
  type: ClusterIP
  selector:
    component: flask-notify
  ports:
    - port: 5000
      targetPort: 5000
